2021-04-05  Luca Saiu  <positron@gnu.org>

	* configure.ac (JITTER_PROFILE_COUNT, JITTER_PROFILE_SAMPLE):
	Change to PVM_PROFILE_COUNT and PVM_PROFILE_SAMPLE, for
	compatibility with Jitter.

2021-04-05  Egeyar Bagcioglu  <egeyar@gmail.com>

	* etc/git-hooks/pre-push: Report it clearly when the pre-push hook
	fails due to remote containing unfetched commits.

2021-04-05  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/pk-hserver.pk (hserver_token_kind): The token is no longer
	an index.
	(hserver_token_cmd): Likewise.
	(hserver_token_function): Likewise.
	(hserver_token_p): Likewise.

2021-04-05  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/poke.c (initialize): Load pk-hserver.pk directly.
	* poke/pk-hserver.h: Remove pk_hserver_load.
	* poke/pk-hserver.c (pk_hserver_load): Remove function.

2021-04-05  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/poke.pk (pk_help): Generate hyperlinks for help topics.
	* poke/pk-dump.pk (pk_dump_addr_hyperlinks): New variable.
	(dump): Support emitting hyperlinnks for printed bytes.
	* doc/poke.texi (Presentation options for @command{dump}):
	Document the hyperlinks support in dump.

2021-04-05  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/pk-hserver.c (pk_hserver_load): New function.
	* poke/poke.c (initialize): Make sure pk-hserver.pk gets loaded
	before poke.pk and the cmd subsystem.

2021-04-04  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/pk-cmd-ios.c (pk_cmd_info_ios): Add column for button
	[close].
	(print_info_ios): Emit a [close] button as a hyperlink.

2021-04-04  Egeyar Bagcioglu  <egeyar@gmail.com>

	* doc/poke.texi: Adjust the output of ".info ios".
	* libpoke/libpoke.c (pk_ios_get_bias): New.
	* libpoke/libpoke.h (pk_ios_get_bias): Likewise.
	* libpoke/pkl-ast.h: Define PKL_AST_BUILTIN_IOGETB and
	PKL_AST_BUILTIN_IOSETB.
	* libpoke/pkl-gen.c (PKL_PHASE_BEGIN_HANDLER): Add the cases
	PKL_AST_BUILTIN_IOGETB and PKL_AST_BUILTIN_IOSETB.
	* libpoke/pkl-lex.l: Add "__PKL_BUILTIN_IOGETB__" and
	"__PKL_BUILTIN_IOSETB__".